fix 1440 wrap in finalList

--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ body {
     .nav {
       width: 100%;
       display: flex;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       padding-top: 10px;
       -moz-column-gap: 25px;
            column-gap: 25px;
